Change AWS, ViewPagerLibrary to Gradle dependencies. Remove ActionBarSherlock (deprecated) and old tab bar references, refactor to use AppCompat fragments, toolbar/appbar and TabLayout. Fix some deprecation warnings, remove some unused resources, migrate more strings to strings.xml, more..